added some headings in about.html

--- a/about.html
+++ b/about.html
@@ -12,5 +12,8 @@
     <h1>About page</h1>
     <h2>About page</h2>
     <h3>About page</h3>
+    <h3>About page</h3>
+    <h3>About page</h3>
+    <h3>About page</h3>
 </body>
 </html>
