--- a/about.html
+++ b/about.html
@@ -12,5 +12,8 @@
     <h1>About page</h1>
     <h2>About page</h2>
     <h3>About page</h3>
+    <p>Avinash</p>
+    <p>Seth</p>
+    <p>Hello world</p>
 </body>
 </html>
